# pegui

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  highlight.js
examples/clicker/: Cargo.toml
examples/clicker/src/: main.rs
examples/empty_app/: Cargo.toml
examples/empty_app/src/: main.rs
examples/label/: Cargo.toml
examples/label/src/: main.rs
src/: buttons.rs  display_device.rs  errors.rs  fonts.rs  lib.rs  ui.rs
src/drivers/: mock.rs  mod.rs  ssd1306.rs
tests/: Cargo.toml
tests/src/: display_clear_test.rs  rectangle_test.rs
workflows/: rust.yml
