[package]
name = "pegui"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
embedded-graphics = "0.8.2"
linux-embedded-hal = "0.4.1"
log = "0.4.29"
rppal = "0.22.1"
ssd1306 = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }

[workspace]
members = [
    ".",
    "examples/empty_app",
    "examples/clicker",
    "tests"
]
resolver = "2"

[profile.release]
opt-level = 's'
lto = "fat"
codegen-units = 1
strip = true
