[package]
name = "pegui"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
embassy = "0.0.0"
embassy-executor = "0.10.0"
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embedded-graphics = "0.8.2"
embedded-hal-async = "1.0.0"
log = "0.4.29"
ssd1306 = "0.10.0"
thiserror = "2.0.18"

[workspace]
members = [
    ".",
    "examples/empty_app",
    "examples/clicker",
    "tests"
]
resolver = "2"

[profile.release]
opt-level = 's'
lto = "fat"
codegen-units = 1
strip = true
