[package]
name = "pegui"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
display-interface = "0.5.0"
embassy = "0.0.0"
embassy-executor = "0.10.0"
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embedded-graphics = "0.8.2"
embedded-hal-async = "1.0.0"
hashbrown = "0.17.1"
log = "0.4.29"
ssd1306 = { version = "0.10.0", features = ["async"] }
static_cell = "2.1.1"
thiserror = "2.0.18"
wee_alloc = "0.4.5"
flume = { version = "0.11", default-features = false, features = ["async"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[workspace]
members = [
    ".",
    "examples/empty_app",
    "examples/clicker",
    "tests"
]
resolver = "2"

[profile.release]
opt-level = 's'
lto = "fat"
codegen-units = 1
strip = true
